projects/nanousd-labs/nanousd/tests/usda/invalid/uchar_negative.usda
#usda 1.0

def Scope "Bad"
{
    uchar value = -1
}
